--- a/packages/backend/.env.example
+++ b/packages/backend/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=BumbleKey
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:n0eVfXWehJ7MEFyRApnTcUTuh4iMqq1Ne/qHW9mA8KI=
 APP_DEBUG=true
 APP_TIMEZONE=UTC
 APP_URL=http://localhost:8000
@@ -19,12 +19,12 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=pgsql
+DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
-DB_PORT=5432
-DB_DATABASE=bumble_key
-DB_USERNAME=postgres
-DB_PASSWORD=
+DB_PORT=3306
+DB_DATABASE=bumblekey_2026
+DB_USERNAME=root
+DB_PASSWORD=LocalDBserver001
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
@@ -96,6 +96,8 @@ FRONTEND_MOBILE_URL=bumblekey://
 HARDWARE_API_SECRET=
 HARDWARE_WEBHOOK_URL=
 
-# Security
-SANCTUM_STATEFUL_DOMAINS=localhost,localhost:5173,127.0.0.1,127.0.0.1:5173
+
+
 SESSION_DOMAIN=localhost
+
+SANCTUM_STATEFUL_DOMAINS=localhost,localhost:5173
