--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -18,11 +18,13 @@
     "axios": "^1.7.9",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "leaflet": "^1.9.4",
     "mapbox-gl": "^3.9.1",
     "qrcode.react": "^4.1.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-hook-form": "^7.54.2",
+    "react-leaflet": "^5.0.0",
     "react-map-gl": "^7.1.7",
     "react-router-dom": "^7.1.3",
     "recharts": "^2.15.0",
