--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -28,6 +28,7 @@
     "react-map-gl": "^7.1.7",
     "react-router-dom": "^7.1.3",
     "recharts": "^2.15.0",
+    "sweetalert2": "^11.17.2",
     "zod": "^3.24.1",
     "zustand": "^5.0.3"
   },
