--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -14,6 +14,8 @@
     "@headlessui/react": "^2.2.0",
     "@heroicons/react": "^2.2.0",
     "@hookform/resolvers": "^3.9.1",
+    "@stripe/react-stripe-js": "^3.5.0",
+    "@stripe/stripe-js": "^5.6.0",
     "@react-google-maps/api": "^2.20.8",
     "axios": "^1.7.9",
     "clsx": "^2.1.1",
